[Total, LineChart] fix cut off tooltips

--- a/src/components/Total/Total.module.css
+++ b/src/components/Total/Total.module.css
@@ -1,50 +1,47 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  width: 100%;
-  margin: 32px auto;
+  min-height: 100vh;
+  border-bottom: 1px solid lightgray;
 }
 
-.selector {
-  margin-bottom: 56px;
+.body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  top: -80px;
   width: 100%;
 }
 
 .title {
-  margin: 32px auto;
+  color: white;
+  margin-bottom: 25px;
+}
+
+.picker {
+  width: 80%;
+  margin-bottom: 24px;
 }
 
 .chart {
   margin: auto;
   width: 50%;
+  margin-top: 40px;
 }
 
 @media (max-width: 1280px) {
-  /* .container {
-    width: 80%;
-  } */
   .chart {
     width: 60%;
   }
 }
 
 @media (max-width: 960px) {
-  /* .container {
-    width: 100%;
-  } */
   .chart {
-    width: 80%;
+    width: 70%;
   }
 }
 
 @media (max-width: 600px) {
-  /* .container {
-    width: 95vw;
-  } */
   .chart {
-    width: 100%;
+    width: 80%;
   }
 }
